# solana_token_transfer

./: Anchor.toml  LICENSE  README.md  new-keypair.json  package-lock.json
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  WalletProvider.tsx  main.tsx
app/src/idl/: solana_token_transfer.json
app/src/utils/: wallet-config.tsx
programs/solana_token_transfer/: Cargo.toml
programs/solana_token_transfer/src/: lib.rs
